Debug uploading artifact

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -56,8 +56,10 @@ jobs:
         env:
           APP_VERSION: ${{ steps.tag.outputs.tag }}
         run: sbt package
+      - name: Debug
+        run: ls -lthR target/scala-*
       - name: Upload jar artifact
         uses: actions/upload-artifact@v1
         with:
-          name: "wordcount_${{ steps.tag.outputs.tag }}.jar"
-          path: "target/scala-${SCALA_VERSION}/wordcount_${{ steps.tag.outputs.tag }}.jar"
+          name: wordcount_${{ steps.tag.outputs.tag }}.jar
+          path: target/scala-$SCALA_VERSION/wordcount_${{ steps.tag.outputs.tag }}.jar
