--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build Scala Word Count
+    name: Build
     steps:
       - uses: actions/checkout@v1
       - uses: olafurpg/setup-scala@v5
@@ -20,7 +20,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     needs: build
-    name: Code static analysis
+    name: Check code
     steps:
       - uses: actions/checkout@v1
       - uses: olafurpg/setup-scala@v5
