--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,8 +29,18 @@ jobs:
       - name: Check code style
         run: sbt scalastyle
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Run tests
+    steps:
+      - uses: actions/checkout@v1
+      - uses: olafurpg/setup-scala@v5
+      - name: Run unittests
+        run: sbt test
+
   pack:
-    needs: [build, lint]
+    needs: [lint, test]
     runs-on: ubuntu-latest
     name: Create package
     steps:
